--- a/player/src/main/res/values/strings.xml
+++ b/player/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Player</string>
+    <string name="sdk_player_framework_loading_text">加载中</string>
 </resources>
